--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<link rel="stylesheet" type="text/css" href="css/melt.css">
 		<link rel="icon" type="image/png" href="images/icon.png">
-		<script src="http://code.jquery.com/jquery-2.2.3.min.js"></script> 
+		<script src="js/jquery-2.2.3.min.js"></script> 
 		<script type="text/javascript" src="js/melt.js"></script>
 		<script type="text/javascript" src="js/owl.carousel.js"></script>
 		<script type="text/javascript" src="js/XSwitch.js"></script>
