--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Melt Sunglass</title>
 		<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=9">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<link rel="stylesheet" type="text/css" href="css/melt.css">
 		<link rel="icon" type="image/png" href="images/icon.png">
