--- a/homepage.html
+++ b/homepage.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>Melt Sunglass</title>
 		<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta http-equiv="X-UA-Compatible" content="IE=9">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<link rel="stylesheet" type="text/css" href="css/melt.css">
 		<link rel="icon" type="image/png" href="images/icon.png">
-		<script src="js/jquery-2.2.3.min.js"></script> 
+		<script src="http://code.jquery.com/jquery-2.2.3.min.js"></script> 
 		<script type="text/javascript" src="js/melt.js"></script>
 		<script type="text/javascript" src="js/owl.carousel.js"></script>
 		<script type="text/javascript" src="js/XSwitch.js"></script>
@@ -63,7 +63,7 @@
                     					<!-- On desktop -->
 										<button class="outline trans white_line mr_30 light show_desktop_only play_video">View Summer Lookbook</button					>
 										<!-- On mobile: open YouTube -->
-										<button class="outline trans white_line light show_mobile_only fc" onclick="window.open('https://www.youtube.com/watch?v=z1GQlqG4oVs', '_blank')">View Summer Lookbook</button>
+										<a href="https://www.youtube.com/watch?v=z1GQlqG4oVs" class="outline trans white_line light show_mobile_only fc" style="padding:10px; color: white; border:1px solid white;">View Summer Lookbook</a>
 
 										<button class="outline trans white_line light show_desktop_only" onclick="window.open('http://www.forever21.com/Product/Category.aspx?br=F21&category=promo-branded-melt', '_blank')">Shop Spring Collection</button>
                         			</div>
